--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Todolist</string>
+    <string name="app_name">Nugazz</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="strike_text"><strike>Bimbingan Skripsi</strike></string>
+    <string name="strike_text"><strike>Proyek PSI</strike></string>
 </resources>
